--- a/controller/static/package.json
+++ b/controller/static/package.json
@@ -16,5 +16,8 @@
     "leaflet.markercluster": "^1.5.0",
     "socket.io": "^4.1.3",
     "videojs-vr": "^1.8.0"
+  },
+  "devDependencies": {
+    "video.js": "^7.14.3"
   }
 }
