--- a/wp_frontend/pubspec.yaml
+++ b/wp_frontend/pubspec.yaml
@@ -42,7 +42,15 @@ dependencies:
   carousel_slider: ^4.1.1
   calendar_view: ^0.0.5
   url_launcher: ^6.1.3
-  #flutter_google_places: ^0.3.0
+  auto_size_text: ^3.0.0
+
+  geocoding: ^2.0.4
+
+  shared_preferences: ^2.0.15
+
+  i18n_extension: ^5.0.0
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +77,7 @@ flutter:
   assets:
     - assets/images/profile.jpg
     - assets/images/memory_icon.png
+    - assets/translations.json
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
