api refactoring with routing

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,14 @@
     // Para más información, visite: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    {"name":"Python: archivo actual","type":"python","request":"launch","program":"${file}","console":"integratedTerminal","justMyCode":true},
         {
             "name": "Python: Flask",
             "type": "python",
             "request": "launch",
             "module": "flask",
             "env": {
-                "FLASK_APP": "app.py",
+                "FLASK_APP": "api/main.py",
                 "FLASK_ENV": "development"
             },
             "args": [
