--- a/wp_frontend/pubspec.yaml
+++ b/wp_frontend/pubspec.yaml
@@ -49,6 +49,12 @@ dependencies:
   shared_preferences: ^2.0.15
 
   i18n_extension: ^5.0.0
+
+  country_picker: ^2.0.15
+
+  provider: ^4.3.2+4 #ADD
+  cool_alert: ^1.1.0
+
   flutter_localizations:
     sdk: flutter
 
