--- a/wp_frontend/pubspec.yaml
+++ b/wp_frontend/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
 
   web_socket_channel: ^2.2.0
 
+  file_selector: ^0.9.0
+  filepicker_windows: ^2.0.2
+
   flutter_localizations:
     sdk: flutter
 
